# 2025_RecSys_Reproducibility

./: .gitignore  README.md  config.env  environment.yml  pyproject.toml
Experiment_1/: age_centered_analysis.ipynb  compute_item_popularity.py  create_user_profiles_in_batches.py  get_subset_stats.ipynb
Experiment_2/Preprocessing/: analyse_experimental_set.ipynb  compare_user_stats_to_filtered_set.ipynb  compute_item_popularity.py  filter_year.py  split_set.py
Experiment_2/Result_Analysis/: Mainstream_Child_AGP_Deviations.ipynb  Miscalibration_Analysis.ipynb  Performance_Analsis.ipynb  Plot_AGPs.ipynb  Popularity_Analysis.ipynb  Process_Results.py
Experiment_2/configs/: all_user_config_bx.yml  all_user_config_ml.yml  all_user_config_mlhd.yml  child_config_bx.yml  child_config_ml.yml  child_config_mlhd.yml
Pre-processing/: AM_genres.txt  BX_Goodreads_Matching.py  BX_create_goodreads_genre_dict.py  BX_filter_ratings.py  MLHD_MB_genre_annotation.py  MLHD_allmusic_matching.py  MLHD_filter_LEs_by_genre.py  MLHD_filter_LEs_by_user_and_artist.py  MLHD_gather_artists.py  MLHD_sample_LEs.py  MLHD_sampling.py  MLHD_simplify_IDs.py  MLHD_testing.ipynb  ML_process_ratings.py
Results/: Additional_Results.md
utils/: BX_genres.txt  ML_genres.txt  age_processing.py  best_models.json  file_handler.py  genre_processing.py
