[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utils"
version = "0.1"
description = "Additional helpful scripts necessary for analysis"
requires-python = ">=3.7"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]